[package]
name = "webttlv"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["", "wasm_converter"]

[dependencies]
hex = "0.4"
kmip-ttlv = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde_json = "1.0"
